@@ -10,7 +10,7 @@
 
 # The config file with the default parameters is found in the Python installation
 # path of xrayutilities. It is however not recommended to change things there,
-# instead the user-specific config file
+# instead use the user-specific config file
 
 # begin of xrayutilities configuration
 [xrayutilities]
@@ -28,3 +28,11 @@ verbosity=1
 # default energy in eV
 # if energy is given wavelength settings will be ignored
 # energy=8048
+
+# number of threads to use in parallel sections of the code
+nthreads = 2
+#   0: the maximum number of available threads will be used
+#      (as returned by omp_get_max_threads())
+#   n: n-threads will be used
+# Note: that due to overhead connected with the multithreading more threads
+# is not always better!
